Changes in 1.9.16
-----------------
** New Feature
    * [FELIX-6131] : Add in-memory persistence manager
** Bug
    * [FELIX-6091] : Permissions do not declare a CapabilityPermission for `osgi.implementation`


Changes in 1.9.14
-----------------
** Bug
    * [FELIX-6066] : Duplicate registration of ConfigurationAdmin from PersistenceManagerTracker


Changes in 1.9.12
-----------------
** Bug
    * [FELIX-6062] : Coordination is not checked if its terminated
    * [FELIX-6061] : Avoid using getDeclaredMethods which needs a permission check


Changes in 1.9.10
-----------------
** Bug
    * [FELIX-5962] : Exception during event processing leaves CM threads alive and holding the JVM running during framework shutdown

** New Feature
    * [FELIX-5951] : Automatically add ConfigurationAdmin service as a shell command


Changes in 1.9.8
----------------
** Bug
    * [FELIX-5949] : Configuration _updates_ are ignored when using a NotCachablePersistenceManager


Changes in 1.9.6
----------------
** Bug
    * [FELIX-5908] : NoClassDefFoundError for the CM Security Domain combiner
    * [FELIX-5918] : AccessControlExceptions in ConfigurationAdmin methods


Changes in 1.9.4
----------------
** Bug
    * [FELIX-5892] : Repeated calls to getFactoryConfiguration return different configuration instances


Changes in 1.9.2
----------------
** Bug
    * [FELIX-5845] : org.apache.felix.cm.impl.persistence.PersistenceManagerProxy broken


Changes in 1.9.0
----------------
** Improvement
    * [FELIX-5288] : Implement RFC 227 (OSGi R7 Update)
    * [FELIX-5351] : Implement coordinations (OSGi R7)
    * [FELIX-5289] : Alias PID Handling of Factory Configurations (OSGi R7)
    * [FELIX-5290] : Locking Configuration Records (OSGi R7)
    * [FELIX-5291] : Improve Configuration Updates (OSGi R7)
    * [FELIX-5292] : Capabilities (OSGi R7)
    * [FELIX-5293] : Improved ConfigurationPlugin Support (OSGi R7)
    * [FELIX-5468] : Refactor persistence handling